--- a/css/common.css
+++ b/css/common.css
@@ -1,62 +1,86 @@
 :root {
-    --teal: #2ec1ac;
-    --teal-hover: #279e8c;
+  --teal: #2ec1ac;
+  --teal-hover: #279e8c;
 }
 
 * {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .h-font {
-    font-family: 'Merienda', cursive;
+  font-family: "Merienda", cursive;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-
-
 .custom-bg {
-    background-color: var(--teal);
-    border: 1px solid var(--teal);
+  background-color: var(--teal);
+  border: 1px solid var(--teal);
 }
 
 .custom-bg:hover {
-    background-color: var(--teal-hover);
-    border-color: var(--teal-hover);
+  background-color: var(--teal-hover);
+  border-color: var(--teal-hover);
 }
 
 .h-line {
-    width: 150px;
-    margin: 0 auto;
-    height: 1.7px;
+  width: 150px;
+  margin: 0 auto;
+  height: 1.7px;
 }
 
 .custom-alert {
-    position: fixed;
-    top: 25px;
-    right: 25px;
+  position: fixed;
+  top: 20px;
+  right: 25px;
+}
+.alert {
+  padding: 10px;
+  color: white;
+  margin-bottom: 15px;
+  position: fixed;
+  top: 70px;
+  right: 25px;
+  z-index: 9999;
+  opacity: 1;
+  transition: opacity 0.6s;
+  font-size: 15px;
+  border-radius: 5px;
 }
 
+/* The close button */
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* When moving the mouse over the close button */
+.closebtn:hover {
+  color: black;
+}
 
 #dashboard-menu {
-    position: fixed;
-    height: 100%;
+  position: fixed;
+  height: 100%;
 }
 
-
-
 @media screen and (max-width: 990px) {
+  #dashboard-menu {
+    height: auto;
+    width: 100%;
+  }
 
-    #dashboard-menu {
-        height: auto;
-        width: 100%;
-    }
-
-    #main-content {
-        margin-top: 60px;
-    }
+  #main-content {
+    margin-top: 60px;
+  }
 }
