--- a/css/style_custom.css
+++ b/css/style_custom.css
@@ -196,3 +196,66 @@ input[type="file"] {
     content: url("../images/upload.svg");
   }
 }
+/* custom card */
+.card {
+  width: 250px;
+  height: 354px;
+  border-radius: 20px;
+  background: #f5f5f5;
+  position: relative;
+  padding: 1.8rem;
+  border: 2px solid #c3c6ce;
+  transition: 0.5s ease-out;
+  overflow: visible;
+}
+
+.card-details {
+  color: black;
+  height: 100%;
+  gap: 0.5em;
+  display: grid;
+  place-content: center;
+}
+
+.card-button {
+  transform: translate(-50%, 125%);
+  width: 60%;
+  border-radius: 1rem;
+  border: none;
+  background-color: #008bf8;
+  color: #fff;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  opacity: 0;
+  transition: 0.3s ease-out;
+  text-align: center;
+}
+
+.text-body {
+  color: rgb(134, 134, 134);
+  -webkit-box-orient: vertical; /* or 'horizontal' for line-by-line truncation */
+  display: -webkit-box;
+  -webkit-line-clamp: 5; /* Limit to 3 lines */
+  overflow: hidden; /* Hide excess content */
+  text-overflow: ellipsis;
+}
+
+/*Text*/
+.text-title {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+/*Hover*/
+.card:hover {
+  border-color: #008bf8;
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+}
+
+.card:hover .card-button {
+  transform: translate(-50%, 50%);
+  opacity: 1;
+}
