--- a/css/style_custom.css
+++ b/css/style_custom.css
@@ -118,6 +118,10 @@ input[type="submit"] {
   height: 70px;
   padding: 10px;
   margin: -18px 20px 20px -20px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  position: relative;
+  top: -2px;
 }
 .close-modal:hover {
   background-color: #555555;
@@ -149,6 +153,8 @@ input[type="submit"]:hover {
   width: 680px;
   height: 70px;
   padding: 10px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
 }
 
 /* custom input thanh lable */
@@ -258,4 +264,56 @@ input[type="file"] {
 .card:hover .card-button {
   transform: translate(-50%, 50%);
   opacity: 1;
+}
+
+/* btn-search */
+.btn-search {
+  font-family: inherit;
+  font-size: 18px;
+  background: #212121;
+  color: white;
+  fill: rgb(155, 153, 153);
+  padding: 0.3em 1em;
+  padding-left: 0.9em;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  border: none;
+  border-radius: 10px;
+  font-weight: 1000;
+}
+
+.btn-search span {
+  display: block;
+  margin-left: 0.3em;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn-search svg {
+  display: block;
+  transform-origin: center center;
+  transition: transform 0.3s ease-in-out;
+}
+
+.btn-search:hover {
+  background: #000;
+}
+
+.btn-search:hover .svg-wrapper {
+  transform: scale(1.25);
+  transition: 0.5s linear;
+}
+
+.btn-search:hover svg {
+  transform: translateX(1.2em) scale(1.1);
+  fill: #fff;
+}
+
+.btn-search:hover span {
+  opacity: 0;
+  transition: 0.5s linear;
+}
+
+.btn-search:active {
+  transform: scale(0.95);
 }
